--- a/main.tex
+++ b/main.tex
@@ -69,7 +69,7 @@ In the next paragraph discuss the differences between the Postgres and R solutio
 Name a few advantages \textbf{and} disadvantages for both solutions. 
 
 % this does not yet work...
-\wordcount{main}
+%\wordcount{main}
 
 
 \section{Verify results}
@@ -77,7 +77,7 @@ Name a few advantages \textbf{and} disadvantages for both solutions.
 % REPLACE WITH YOUR TEXT HERE
 Compare your SQL calculated indices to the R calculated indices. Do they differ and if they do, why?
 
-\wordcount{main}
+%\wordcount{main}
 
 \section{Spatial variability}
 
@@ -98,10 +98,17 @@ If you want to cite your HOBO report here, add an bibliography entry to the \tex
 
 You can cite it with the \texttt{\textbackslash citep\{hobo\}} command \citep{hobo}.
 
-\wordcount{main}
+%\wordcount{main}
 
 
 \section{Indices across time and space}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=.5\textwidth]{./figures/example_analysis}
+    \caption{Boxplot of the mean, minimum and maximum hourly, quality checked air temperature in Freiburg on Christmas eve. The data was taken from 52 different locations in 2019, 2020 and 2021. Original measurements were taken with an onset HOBO temperature data logger.}
+    \label{fig:first_figure}
+\end{figure}
 
 % REPLACE WITH YOUR TEXT HERE
 This last section should focus on the question how this years' measurements compare 
@@ -111,11 +118,26 @@ The necessary commands are already loaded in this template.
 
 You can even automate your workflow further and run your scripts producing the 
 PDFs in this repository, saving them to the \texttt{'./figures/'} subfolder. 
-This will refresh the figures in the report whenever, your scripts overwrite them.
+This will refresh the figures in the report whenever, your scripts overwrite them (Fig \ref{fig:first_figure}).
 
-\textit{An example how to add the figures will follow}
+The figure above can be included like:
 
-\wordcount{main}
+\begin{verbatim}
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=.5\textwidth]{./figures/example_analysis}
+    \caption{Boxplot of the mean, minimum and maximum hourly, quality 
+    checked air temperature in Freiburg on Christmas eve. The data was 
+    taken from 52 different locations in 2019, 2020 and 2021. Original 
+    measurements were taken with an onset HOBO temperature data logger.}
+    \label{fig:first_figure}
+\end{figure}
+\end{verbatim}
+
+
+
+
+%\wordcount{main}
 
 \bibliography{bibliography}
 \end{document}
